--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_admin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Panel de Control - Productos</title>
+    <link rel="icon" href="../img/cupon-estrella.png" type="image/x-icon">
+    <title>Panel de Control</title>
 </head>
 <body>
     <header id="header-container">
