--- a/admin/index.html
+++ b/admin/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="style_admin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="../img/cupon-estrella.png" type="image/x-icon">
@@ -55,28 +56,28 @@
                 </div>
             </div>
         </section>
-    </main>
-
-    <!-- Modal único -->
-    <div id="modal" class="modal" onclick="cerrarModal(event)">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-btn" onclick="cerrarModal()">&times;</span>
-            <h3 id="modal-producto-nombre">Nombre del Producto</h3>
-            <p><strong>ID del Vendedor:</strong> <span id="modal-producto-vendedor">12345</span></p>
-            <p><strong>Descripción:</strong> Producto en espera de revisión</p>
-            <p><strong>Precio:</strong> $<span id="modal-producto-precio">100.00</span></p>
-            <p><strong>Categoría:</strong> Electrónica</p>
-            <img id="modal-producto-imagen" src="ruta/de/imagen.jpg" alt="Imagen del Producto">
-            <div id="botones-aprobacion">
-                <button id="aprobar-btn" class="button aprobar">Aprobar</button>
-                <button id="rechazar-btn" class="button rechazar">Rechazar</button>
+        <section class="modal-container">
+            <div id="modal" class="modal" onclick="cerrarModal(event)">
+                <div class="modal-content" onclick="event.stopPropagation()">
+                    <span class="close-btn" onclick="cerrarModal()">&times;</span>
+                    <h3 id="modal-producto-nombre">Nombre del Producto</h3>
+                    <p><strong>ID del Vendedor:</strong> <span id="modal-producto-vendedor">12345</span></p>
+                    <p><strong>Descripción:</strong> Producto en espera de revisión</p>
+                    <p><strong>Precio:</strong> $<span id="modal-producto-precio">100.00</span></p>
+                    <p><strong>Categoría:</strong> Electrónica</p>
+                    <img id="modal-producto-imagen" src="ruta/de/imagen.jpg" alt="Imagen del Producto">
+                    <div id="botones-aprobacion">
+                        <button id="aprobar-btn" class="button aprobar">Aprobar</button>
+                        <button id="rechazar-btn" class="button rechazar">Rechazar</button>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-
-    <footer>
-        <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
-    </footer>
+        </section>
+    </main>
     <script type="module" src="../js/ofertas.js" defer></script>
+    <script type="module" src="prueba.js" defer></script>
 </body>
+<footer>
+    <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
+</footer>
 </html>
