--- a/admin/index.html
+++ b/admin/index.html
@@ -18,6 +18,14 @@
             <ul>
                 <li>
                     <button>
+                        <a href="index.html">
+                            <i class="fa-solid fa-star"></i>
+                            <h2>Panel principal</h2>
+                        </a>
+                    </button>
+                </li>
+                <li>
+                    <button>
                         <a href="crearCuentaVendedor.html">
                             <i class="fa-solid fa-user-plus"></i>
                             <h2>Crear Vendedor</h2>
