--- a/vendedor/index.html
+++ b/vendedor/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <section id="body-container">
-        <div class="barra" style="width: 80%;">
+        <div class="barra">
             <h2>Mis Productos</h2>
         </div>
     </section>
