--- a/vendedor/pages/addproducto.html
+++ b/vendedor/pages/addproducto.html
@@ -18,7 +18,7 @@
                 <li><button><a href="../index.html"><i class="fa-solid fa-folder" id="icons"></i><h2>Catalogo</h2></a></button></li>
                 <li><button><a href="../pages/addproducto.html"><i class="fa-solid fa-circle-plus" id="icons"></i><h2>Agregar Producto</h2></a></button></li>
                 <li><button><a href="../pages/perfilVendedor.html"><i class="fa-solid fa-user" id="icons"></i><h2>Mi perfil</h2></a></button></li>
-                <li><button><a href="../../LogIn.html"><i class="fa-solid fa-right-from-bracket"></i><h2>Cerrar sesion</h2></a></button></li>
+                <li><button><a href="../../LogIn.html"><i class="fa-solid fa-right-from-bracket"></i><h2>Cerrar sesión</h2></a></button></li>
             </ul>
         </nav>
     </header>
