--- a/pages-products/belleza/misterBro.html
+++ b/pages-products/belleza/misterBro.html
@@ -22,7 +22,7 @@
                 <li><button><a href="../../pages-user/things.html"><i class="fa-solid fa-gift" id="icons"></i><h2>Things</h2></a></button></li>
                 <li><button><a href="../../pages-user/comofunciona.html"><i class="fa-solid fa-circle-info" id="icons"></i><h2>¿Cómo funciona?</h2></a></button></li>
                 <li><button><a href="../../pages-user/nosotros.html"><i class="fa-solid fa-users" id="icons"></i><h2>Nosotros</h2></a></button></li>
-                <li><button><a href="../../LogIn.html"><i class="fa-solid fa-right-from-bracket"></i><h2>Cerrar sesion</h2></a></button></li>
+                <li><button><a href="../../LogIn.html"><i class="fa-solid fa-right-from-bracket"></i><h2>Cerrar sesión</h2></a></button></li>
             </ul>
         </nav>
     </header>
