--- a/admin/index.html
+++ b/admin/index.html
@@ -84,6 +84,7 @@
     </main>
     <script type="module" src="../js/ofertas.js" defer></script>
     <script type="module" src="prueba.js" defer></script>
+    <script type="module" src="../js/catalogo.js"></script>
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
