--- a/admin/index.html
+++ b/admin/index.html
@@ -64,23 +64,23 @@
                 </div>
             </div>
         </section>
-        <section class="modal-container">
-            <div id="modal" class="modal" onclick="cerrarModal(event)">
-                <div class="modal-content" onclick="event.stopPropagation()">
-                    <span class="close-btn" onclick="cerrarModal()">&times;</span>
-                    <h3 id="modal-producto-nombre">Nombre del Producto</h3>
-                    <p><strong>ID del Vendedor:</strong> <span id="modal-producto-vendedor">12345</span></p>
-                    <p><strong>Descripción:</strong> Producto en espera de revisión</p>
-                    <p><strong>Precio:</strong> $<span id="modal-producto-precio">100.00</span></p>
-                    <p><strong>Categoría:</strong> Electrónica</p>
-                    <img id="modal-producto-imagen" src="ruta/de/imagen.jpg" alt="Imagen del Producto">
+        <section class="modal-container" style="display: none;">
+            <div id="modal" class="modal">
+                <div class="modal-content">
+                    <span class="close-btn" onclick="admin.cerrarModal()">&times;</span>
+                    <h3 id="modal-producto-nombre"></h3>
+                    <p><strong>ID del Vendedor:</strong> <span id="modal-producto-vendedor"></span></p>
+                    <p><strong>Descripción:</strong> <span id="modal-producto-descripcion"></span></p>
+                    <p><strong>Precio:</strong> $<span id="modal-producto-precio"></span></p>
+                    <p><strong>Categoría:</strong> <span id="modal-producto-categoria"></span></p>
+                    <img id="modal-producto-imagen" src="" alt="Imagen del Producto">
                     <div id="botones-aprobacion">
                         <button id="aprobar-btn" class="button aprobar">Aprobar</button>
                         <button id="rechazar-btn" class="button rechazar">Rechazar</button>
                     </div>
                 </div>
             </div>
-        </section>
+        </section>        
     </main>
     <script type="module" src="prueba.js" defer></script>
 </body>
