--- a/vendedor/index.html
+++ b/vendedor/index.html
@@ -31,4 +31,5 @@
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
 </footer>
+<script type="module" src="js/Catalogo.js"></script>
 </html>
