enlazando responsive a categorias

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
     <header id="header-container">
+        <input type="checkbox" id="hamburger-icon">
+        <label for="hamburger-icon" id="hamburger-label">&#9776;</label>
         <a href="index.html"><img src="img/CM-Logo.png" alt="Logo-CM" id="logo"></a>
         <nav id="pages">
             <ul>
@@ -26,6 +28,7 @@
             </ul>
         </nav>
     </header>
+    
     <section id="body-container">
         <article>
             <div class="barra">
