--- a/vendedor/index.html
+++ b/vendedor/index.html
@@ -25,11 +25,13 @@
         <div class="barra">
             <h2>Mis Productos</h2>
         </div>
+        <div id="productosContainer"></div>
+
     </section>
 
+<script type="module" src="js/Catalogo.js"></script>
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
 </footer>
-<script type="module" src="js/Catalogo.js"></script>
 </html>
