--- a/pages-products/Salud/Clinica_dental.html
+++ b/pages-products/Salud/Clinica_dental.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     <header id="header-container">
+        <input type="checkbox" id="hamburger-icon">
+        <label for="hamburger-icon" id="hamburger-label">&#9776;</label>
         <a href="../../index.html"><img src="../../img/CM-Logo.png" alt="Logo-CM" id="logo"></a>
         <nav id="pages">
             <ul>
