--- a/vendedor/index.html
+++ b/vendedor/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/catalogo.css">
     <link rel="stylesheet" href="../index_Flexible.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="../img/cupon-estrella.png" type="image/x-icon">
@@ -25,11 +26,17 @@
         <div class="barra">
             <h2>Mis Productos</h2>
         </div>
-        <div id="productosContainer"></div>
+        <div id="productosContainer">
+            <button type="button" id="mostrar_producto">Mostrar Productos</button>
+            <div id="listaProductos"></div> <!-- Contenedor para mostrar los productos -->
+        </div>
+        
 
     </section>
 
-<script type="module" src="js/Catalogo.js"></script>
+    <script type="module" src="../js/Catalogo.js"></script>
+
+
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
