--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 </head>
 <body>
     <header id="header-container">
-        <input type="checkbox" id="hamburger-icon">
-        <label for="hamburger-icon" id="hamburger-label">&#9776;</label>
         <a href="index.html"><img src="img/CM-Logo.png" alt="Logo-CM" id="logo"></a>
         <nav id="pages">
             <ul>
@@ -34,40 +32,44 @@
             <div class="barra">
                 <h2>Comida</h2>
             </div>
-            <div class="opciones">
-                <a href="pages/comida.html"><img src="img/comida/box2.jpeg" alt="monster-burritos" width="260" height="150"></a>
-                <div class="info-cupon">
-                    <img src="img/logos-empresas/burritos-university.jpeg" alt="">
-                    <p>Banquete Mexicano: Elige entre 2 tortas o 2 burritos + 8 tacos + chile toreado + Cebolla asada + 2 bebidas</p>
+            <a href="pages-products/comida/burritos-university.html">
+                <div class="opciones">
+                    <img src="img/comida/box2.jpeg" alt="monster-burritos" width="260" height="150">
+                    <div class="info-cupon">
+                        <img src="img/logos-empresas/burritos-university.jpeg" alt="">
+                        <p>Banquete Mexicano: Elige entre 2 tortas o 2 burritos + 8 tacos + chile toreado + Cebolla asada + 2 bebidas</p>
+                    </div>
+                    <h3>$13.99</h3>
+                    <h4>42% off | Antes $23.99</h4>
+                    <h5>Finaliza en: <span id="bold">10 días</span></h5>
                 </div>
-                <h3>$13.99</h3>
-                <h4>42% off | Antes $23.99</h4>
-                <h5>Finaliza en: <span id="bold">10 días</span></h5>
-             </div>
-             <div class="opciones">
+            </a>
+            <a href="pages-products/comida/bodega del cerdito.html">
+                <div class="opciones">
+                    <img src="img/comida/bodega.jpg" alt="Hijos del Chilaquil" width="260" height="150">
 
-                 <a href="pages/comida.html"><img src="img/comida/bodega.jpg" alt="Hijos del Chilaquil" width="260" height="150"></a>
-
-                <div class="info-cupon">
-                    <img src="img/logos-empresas/la bodeguita del cerdito.jpeg" alt="">
-                    <p>Paga $15.00 en lugar de $20. Consumo de alimentos en todo el menú.</p>
+                    <div class="info-cupon">
+                        <img src="img/logos-empresas/la bodeguita del cerdito.jpeg" alt="">
+                        <p>Paga $15.00 en lugar de $20. Consumo de alimentos en todo el menú.</p>
+                    </div>
+                    <h3>$15</h3>
+                    <h4>25% off | Antes $20</h4>
+                    <h5>Finaliza en: <span id="bold">10 días</span></h5>
                 </div>
-                <h3>$15</h3>
-                <h4>25% off | Antes $20</h4>
-                <h5>Finaliza en: <span id="bold">10 días</span></h5>
+            </a>
+            <a href="pages-products/comida/finesterre.html">
+                <div class="opciones">
+                    <img src="img/comida/finesterre.jpg" alt="Hijos del Chilaquil" width="260" height="150">
 
-             </div>
-             <div class="opciones">
-                 <a href="pages/comida.html"><img src="img/comida/finesterre.jpg" alt="Hijos del Chilaquil" width="260" height="150"></a>
-
-                <div class="info-cupon">
-                    <img src="img/logos-empresas/finesterre.jpeg" alt="">
-                    <p>¡Paella Mixta para 5 personas hasta tu casa! (Camarones, Calamar, Cangrejo, Almejas, Costilla, Carne y Pollo)</p>
+                    <div class="info-cupon">
+                        <img src="img/logos-empresas/finesterre.jpeg" alt="">
+                        <p>¡Paella Mixta para 5 personas hasta tu casa! (Camarones, Calamar, Cangrejo, Almejas, Costilla, Carne y Pollo)</p>
+                    </div>
+                    <h3>$18</h3>
+                    <h4>49% off | Antes $35</h4>
+                    <h5>Finaliza en: <span id="bold">10 días</span></h5>
                 </div>
-                <h3>$18</h3>
-                <h4>49% off | Antes $35</h4>
-                <h5>Finaliza en: <span id="bold">10 días</span></h5>
-             </div>
+            </a>
         </article>
 
         <article>
@@ -75,20 +77,22 @@
                 <h2>Belleza</h2>
             </div>
             <div id="galeria">
-                <div class="opciones">
-                    <a href="pages/belleza.html"><img src="img/belleza/barbotas.jpeg" alt="Hijos del Chilaquil" width="260" height="150"></a>
+                <a href="pages-products/belleza/barbotas.html">
+                    <div class="opciones">
+                        <img src="img/belleza/barbotas.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
 
-                    <div class="info-cupon">
-                        <img src="img/logos-empresas/barbotas.jpg" alt="">
-                        <p>¡Cabello, barba y rostro perfectos! Super paquete de promoción. Con corte de cabello + corte de barba + facial de limpieza</p>
+                        <div class="info-cupon">
+                            <img src="img/logos-empresas/barbotas.jpg" alt="">
+                            <p>¡Cabello, barba y rostro perfectos! Super paquete de promoción. Con corte de cabello + corte de barba + facial de limpieza</p>
+                        </div>
+                        <h3>$30</h3>
+                        <h4>25% off | Antes $40</h4>
+                        <h5>Finaliza en: <span id="bold">10 días</span></h5>
                     </div>
-                    <h3>$30</h3>
-                    <h4>25% off | Antes $40</h4>
-                    <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                </div>
+                </a>
+                <a href="pages-products/belleza/misterBro.html">
                 <div class="opciones">
-                    <a href="pages/belleza.html"><img src="img/belleza/mister-bro.jpeg" alt="Hijos del Chilaquil" width="260" height="150"></a>
-
+                    <img src="img/belleza/mister-bro.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
                     <div class="info-cupon">
                         <img src="img/logos-empresas/mister-bro.jpeg" alt="">
                         <p>Paquete Corte de cabello + Corte de Barba + Pedicure Spa Paga</p>
@@ -97,11 +101,10 @@
                     <h4>28% off | Antes $36</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
                 </div>
+                </a>
+                <a href="pages-products/belleza/cejas-pestanias.html">
                 <div class="opciones">
-
-                    <a href="pages/belleza.html"><img src="img/belleza/cejas-y-pestanas.png" alt="Hijos del Chilaquil" width="260" height="150"></a>
-
-
+                    <img src="img/belleza/cejas-y-pestanas.png" alt="Hijos del Chilaquil" width="260" height="150">
                     <div class="info-cupon">
                         <img src="img/logos-empresas/cejas-pestañas.png" alt="">
                         <p>Realza tu Mirada: Lifting de Pestañas Profesional</p>
@@ -110,6 +113,7 @@
                     <h4>62% off | Antes $26.25</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
                 </div>
+                </a>
             </div>
         </article>
 
@@ -118,9 +122,10 @@
                 <h2>Viajes</h2>
             </div>
             <div id="galeria">
+                <a href="pages-products/viajes/paintPark.html">
                 <div class="opciones">
 
-                    <a href="pages/viajes.html"><img src="img/viajes/parque.jpeg" alt="Hijos del Chilaquil" width="260" height="150"></a>
+                    <img src="img/viajes/parque.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
 
                     <div class="info-cupon">
                         <img src="img/logos-empresas/paint-park.jpeg" alt="">
@@ -130,9 +135,11 @@
                     <h4>40% off | Antes $50</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
                 </div>
+                </a>
+                <a href="pages-products/viajes/posadaCielo.html">
                 <div class="opciones">
 
-                    <a href="pages/viajes.html"><img src="img/viajes/la-posada-del-cielo.jpeg" alt="La Posada del Cielo" width="260" height="150"></a>
+                    <img src="img/viajes/la-posada-del-cielo.jpeg" alt="La Posada del Cielo" width="260" height="150">
 
 
                     <div class="info-cupon">
@@ -143,6 +150,7 @@
                     <h4>58% off | Antes $65</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
                 </div>
+                </a>
             </div>
         </article>
 
@@ -151,9 +159,10 @@
                 <h2>Salud</h2>
             </div>
             <div id="galeria">
+                <a href="pages-products/salud/Clinica_dental.html">
                 <div class="opciones">
 
-                    <a href="pages/salud.html"><img src="img/salud/clinica-cindy-padilla-relleno.png" alt="Clínica Cindy Padilla" width="260" height="150"></a>
+                    <img src="img/salud/clinica-cindy-padilla-relleno.png" alt="Clínica Cindy Padilla" width="260" height="150">
                     <div class="info-cupon">
                         <img src="img/logos-empresas/clinica-dental.jpg" alt="">
                         <p>1 relleno + limpieza dental con ultrasonido + pulido dental + diagnóstico + plan de tratamiento + presupuesto</p>
@@ -162,10 +171,11 @@
                     <h4>71% off | Antes $70</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
                 </div>
+                </a>
+                <a href="pages-products/salud/UltraGroup.html">
                 <div class="opciones">
 
-                    <a href="pages/salud.html"><img src="img/salud/ultra-group.jpeg" alt="Ultra Group" width="260" height="150"></a>
-
+                    <img src="img/salud/ultra-group.jpeg" alt="Ultra Group" width="260" height="150">
                     <div class="info-cupon">
                         <img src="img/logos-empresas/ultra-group.png" alt="">
                         <p>Ultrasonografía a escoger + consulta médica de clínica <span id="bold">Ultra-A-Group</span></p>
@@ -174,9 +184,12 @@
                     <h4>71% off | Antes $65</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
                 </div>
+                </a>
+
+                <a href="pages-products/salud/LabClinico.html">
                 <div class="opciones">
 
-                    <a href="pages/salud.html"><img src="img/salud/lab-vidlab.png" alt="VIDLAB" width="260" height="150"></a>
+                    <img src="img/salud/lab-vidlab.png" alt="VIDLAB" width="260" height="150">
 
 
                     <div class="info-cupon">
@@ -187,6 +200,7 @@
                     <h4>52% off | Antes $575</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
                 </div>
+                </a>
             </div>
         </article>
 
@@ -195,8 +209,9 @@
                 <h2>Things</h2>
             </div>
             <div id="galeria">
+                <a href="pages-products/things/BioInnova.html">
                 <div class="opciones">
-                    <a href="pages/things.html"><img src="img/things/bioinnova.jpeg" alt="monster-burritos" width="260" height="150"></a>
+                    <img src="img/things/bioinnova.jpeg" alt="monster-burritos" width="260" height="150">
 
                     <div class="info-cupon">
                         <img src="img/logos-empresas/bioinnova.png" alt="">
@@ -206,9 +221,11 @@
                     <h4>38% off | Antes $80</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
                 </div>
+                </a>
+                <a href="pages-products/things/VidLab.html">
                 <div class="opciones">
 
-                    <a href="pages/things.html"><img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150"></a>
+                    <img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
 
                     <div class="info-cupon">
                         <img src="img/logos-empresas/vid-lab.jpeg" alt="">
@@ -218,9 +235,11 @@
                     <h4>52% off | Antes $575</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
                 </div>
+                </a>
+                <a href="pages-products/things/BioInnova2.html">
                 <div class="opciones">
 
-                    <a href="pages/things.html"><img src="img/things/bioinnova-silla.jpeg" alt="Hijos del Chilaquil" width="260" height="150"></a>
+                    <img src="img/things/bioinnova-silla.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
 
 
                     <div class="info-cupon">
@@ -231,6 +250,7 @@
                     <h4>65% off | Antes $138.5</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
                 </div>
+                </a>
             </div>
         </article>
     </section>
