--- a/pages-user/comofunciona.html
+++ b/pages-user/comofunciona.html
@@ -33,8 +33,7 @@
                 <ul>
                     <li>
                         <p>
-                            El primer paso para poder disfrutar de los múltiples beneficios que ofrece nuestro maravilloso sitio es: Iniciar Sesión, 
-                            sino posees una cuenta,Regístrate.
+                            El primer paso para poder disfrutar de los múltiples beneficios que ofrece nuestro maravilloso sitio es: Iniciar Sesión.
                         </p>
                     </li>
                     <li>
