--- a/vendedor/index.html
+++ b/vendedor/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="../img/cupon-estrella.png" type="image/x-icon">
-
     <title>CupónMania</title>
 </head>
 <body>
@@ -27,18 +26,13 @@
             <h2>Mis Productos</h2>
         </div>
         <div id="productosContainer">
-            <button type="button" id="mostrar_producto">Mostrar Productos</button>
             <div id="listaProductos"></div> <!-- Contenedor para mostrar los productos -->
         </div>
-        
-
     </section>
-
-    <script type="module" src="../js/Catalogo.js"></script>
-
-
-</body>
+    <script type="module" src="../js/Catalogo.js" defer></script>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
 </footer>
+<script type="module" src="../js/Catalogo.js"></script>
+</body>
 </html>
