--- a/pages-user/belleza.html
+++ b/pages-user/belleza.html
@@ -27,7 +27,7 @@
     </header>
 
     <section id="body-container">
-        <div class="barra">
+        <div class="barra" id="products-container">
             <h2>Belleza</h2>
         </div>
         <a href="../pages-products/belleza/barbotas.html">
