--- a/pages-user/comida.html
+++ b/pages-user/comida.html
@@ -30,6 +30,7 @@
         <div class="barra">
             <h2>Comida</h2>
         </div>
+        <div id="productos-container">
         <a href="../pages-products/comida/hijos-del-chilaquil.html">
             <div class="opciones">
                 <img src="../img/comida/hijos-del-chilaquil.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
@@ -99,11 +100,12 @@
                 </p>
             </div>
         </a>
-
+    </div>
     </section>
 
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
 </footer>
+<script type="module" src="../js/mostrarindex.js"></script>
 </html>
