--- a/pages-user/salud.html
+++ b/pages-user/salud.html
@@ -30,6 +30,7 @@
         <div class="barra">
             <h2>Salud</h2>
         </div>
+        <div id="productos-container">
         <a href="../pages-products/Salud/Clinica_dental.html">
         <div class="opciones">
             <img src="../img/salud/clinica-cindy-padilla-relleno.png" alt="Hijos del Chilaquil" width="260" height="150">
@@ -99,7 +100,8 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
-    </a>
+        </a>
+        </div>
     </section>
 </body>
 <footer>
