--- a/pages-user/things.html
+++ b/pages-user/things.html
@@ -27,7 +27,7 @@
     </header>
 
     <section id="body-container">
-        <div class="barra">
+        <div class="barra" id="products-container">
             <h2>Things</h2>
         </div>
         <a href="../pages-products/things/ZonaFitness.html">
