--- a/pages-user/viajes.html
+++ b/pages-user/viajes.html
@@ -27,7 +27,7 @@
     </header>
 
     <section id="body-container">
-        <div class="barra">
+        <div class="barra" id="products-container">
             <h2>Viajes</h2>
         </div>
         <a href="../pages-products/viajes/paintPark.html">
