--- a/pages-user/cuentaNueva.html
+++ b/pages-user/cuentaNueva.html
@@ -14,19 +14,7 @@
 </head>
 <body>
     <header id="header-container">
-        <a href="../index.html"><img src="../img/CM-Logo.png" alt="Logo-CM" id="logo"></a>
-        <nav id="pages">
-            <ul>
-                <li><button><a href="comida.html"><i class="fas fa-utensils" id="icons"></i><h2>Comida</h2></a></button></li>
-                <li><button><a href="belleza.html"><i class="fa-solid fa-spray-can-sparkles" id="icons"></i><h2>Belleza</h2></a></button></li>
-                <li><button><a href="viajes.html"><i class="fa-solid fa-plane-departure" id="icons"></i><h2>Viajes</h2></a></button></li>
-                <li><button><a href="salud.html"><i class="fa-solid fa-notes-medical" id="icons"></i><h2>Salud</h2></a></button></li>
-                <li><button><a href="things.html"><i class="fa-solid fa-gift" id="icons"></i><h2>Things</h2></a></button></li>
-                <li><button><a href="comofunciona.html"><i class="fa-solid fa-circle-info" id="icons"></i><h2>¿Cómo funciona?</h2></a></button></li>
-                <li><button><a href="nosotros.html"><i class="fa-solid fa-users" id="icons"></i><h2>Nosotros</h2></a></button></li>
-                <li><button><a href="formulario.html"><i class="fa-solid fa-user" id="icons"></i><h2>Registrarse</h2></a></button></li>
-            </ul>
-        </nav>
+        <a href=""><img src="../img/CM-Logo.png" alt="Logo-CM" id="logo"></a>
     </header>
 
     <div id="message"></div>
