--- a/admin/crearCuentaVendedor.html
+++ b/admin/crearCuentaVendedor.html
@@ -25,7 +25,7 @@
     </header>
 
     <div class="form-container" style="width: 100%;">
-        <img src="img/CM.png" alt="" class="logo-CM">
+        <img src="../img/CM.png" alt="" class="logo-CM">
         <div class="formulario">
             <div class="head">
                 <h2>Perfil Vendedor</h2>
