--- a/vendedor/pages/addproducto.html
+++ b/vendedor/pages/addproducto.html
@@ -33,6 +33,8 @@
                     <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="nombre_producto" type="text" required class="text" placeholder="Nombre del Producto"></li>
                     <li><span class="inicio"><i class="fa-solid fa-info"></i></span><input id="descripcion_producto" type="text" required class="text" placeholder="Descripción"></li>
                     <li><span class="inicio"><i class="fa-solid fa-money-bill"></i></span><input id="precio_producto" type="number" required class="text" placeholder="Precio"></li>
+                    <li><span class="inicio"><i class="fa-solid fa-percent"></i></span><input id="descuento" type="number" required class="text" placeholder="Descuento"></li>
+                    <li><span class="inicio"><i class="fa-solid fa-money-bill"></i></span><input id="precioa" type="number" required class="text" placeholder="Precio anterior"></li>
                     <li><span class="inicio"><i class="fa-solid fa-list"></i></span><input id="categoria_producto" type="text" required class="text" placeholder="Categoría"></li>
                     <li><span class="inicio"><i class="fa-solid fa-link"></i></span><input id="imagen_url" type="text" required class="text" placeholder="URL de la imagen"></li>
                     <li><button type="submit" class="boton">Guardar producto</button></li>
