--- a/vendedor/index.html
+++ b/vendedor/index.html
@@ -33,5 +33,6 @@
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
 </footer>
 <script type="module" src="../js/Catalogo.js"></script>
+<script type="module" src="../js/crear_y_gestionarCatalogo.js"></script>
 </body>
 </html>
